[gd_scene load_steps=11 format=3 uid="uid://b8llenv4yy7sq"]

[ext_resource type="Script" path="res://Scenes/SceneManager/scene_manager.gd" id="1_gdtpy"]
[ext_resource type="PackedScene" uid="uid://4twbdn06w2a8" path="res://Scenes/UI/Menus/TitleScreen/title_screen.tscn" id="2_bloxe"]
[ext_resource type="PackedScene" uid="uid://c03h6ygt7ddxy" path="res://Scenes/UI/Menus/Settings/audio_settings.tscn" id="4_3f6cy"]
[ext_resource type="PackedScene" uid="uid://d1xetuvlgpv3a" path="res://Scenes/UI/Menus/Pause/pause_menu.tscn" id="5_apfqm"]
[ext_resource type="Script" path="res://Scenes/SceneManager/saver_loader.gd" id="6_q3kso"]
[ext_resource type="PackedScene" uid="uid://cgbh07inosss0" path="res://Scenes/Autoloads/audio_handler.tscn" id="6_txaea"]
[ext_resource type="PackedScene" uid="uid://ddgta5o6gldcp" path="res://Scenes/UI/Menus/Settings/settings_menu.tscn" id="7_4pllj"]
[ext_resource type="PackedScene" uid="uid://fiwbn0jbecfj" path="res://Scenes/Autoloads/vfx.tscn" id="8_3406b"]
[ext_resource type="PackedScene" uid="uid://bji4smf0bk1ka" path="res://Scenes/UI/Menus/Controls/Controls.tscn" id="8_ohj7y"]
[ext_resource type="Script" path="res://Scenes/Autoloads/global_var.gd" id="11_qxg1a"]

[node name="SceneManager" type="Node"]
process_mode = 3
script = ExtResource("1_gdtpy")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
anchors_preset = -1
anchor_left = -0.812
anchor_top = -0.883
offset_left = 46.3601
offset_top = -194.24
offset_right = 2580.0
offset_bottom = 1395.0
mouse_filter = 1
color = Color(0, 0, 0, 1)

[node name="VFX" parent="." instance=ExtResource("8_3406b")]

[node name="Menu" type="CanvasLayer" parent="."]
layer = 5

[node name="TitleScreen" parent="Menu" instance=ExtResource("2_bloxe")]

[node name="AudioSettings" parent="Menu" instance=ExtResource("4_3f6cy")]
visible = false

[node name="PauseMenu" parent="Menu" instance=ExtResource("5_apfqm")]
visible = false

[node name="SettingsMenu" parent="Menu" instance=ExtResource("7_4pllj")]
visible = false

[node name="Controls" parent="Menu" instance=ExtResource("8_ohj7y")]
visible = false

[node name="AudioHandler" parent="." instance=ExtResource("6_txaea")]

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("6_q3kso")

[node name="GlobalVar" type="Node" parent="."]
script = ExtResource("11_qxg1a")
